Updated auto paths for initial scoring Co-Authored-By: Space9999 Co-Authored-By: griffey07